implementing echo client and server